load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["time-defined-cache.go"],
    importpath = "kubevirt.io/kubevirt/tools/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/kubevirt.io/client-go/log:go_default_library",
        "//vendor/kubevirt.io/kubevirt/pkg/pointer:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cache_suite_test.go",
        "time-defined-cache_test.go",
    ],
    deps = [
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/kubevirt.io/client-go/testutils:go_default_library",
        "//vendor/kubevirt.io/kubevirt/tools/cache:go_default_library",
    ],
)
