load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["doc-generator.go"],
    importpath = "kubevirt.io/kubevirt/tools/doc-generator",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/machadovilaca/operator-observability/pkg/docs:go_default_library",
        "//vendor/github.com/machadovilaca/operator-observability/pkg/operatormetrics:go_default_library",
        "//vendor/kubevirt.io/kubevirt/pkg/monitoring/metrics/virt-api:go_default_library",
        "//vendor/kubevirt.io/kubevirt/pkg/monitoring/metrics/virt-controller:go_default_library",
        "//vendor/kubevirt.io/kubevirt/pkg/monitoring/metrics/virt-handler:go_default_library",
        "//vendor/kubevirt.io/kubevirt/pkg/monitoring/metrics/virt-operator:go_default_library",
        "//vendor/kubevirt.io/kubevirt/pkg/monitoring/rules:go_default_library",
    ],
)

go_binary(
    name = "doc-generator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
